--- a/index.html
+++ b/index.html
@@ -3,27 +3,18 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>waar zijn de vossen</title>
+    <title>de koelheid van vossen</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <h1>Wat eten ze?</h1>
-    <ul class="menu">
-      <li><a href="index.html">Hoofdpagina</a></li>
-      <li><a href="waar te vinden.html">Waar te vinden</a></li>
-      <li><a href="wat ze eten.html">Wat eten ze</a></li>
-    </ul>
-    <div class="content">
-      <p>Vossen zijn omnivoren, dus eten ze veel verschillende dingen bijvoorbeeld:</p>
-      <ul>
-        <li>Insecten</li>
-	      <li>Veel soorten knaagdieren</li>
-	      <li>Vruchten en bessen</li>
-	      <li>Visaas</li>
+    <h1>vos</h1>
+      <ul class="menu">
+        <li><a href="index.html">Hoofdpagina</a></li>
+        <li><a href="waar te vinden.html">Waar te vinden</a></li>
+        <li><a href="wat ze eten.html">Wat eten ze</a></li>
       </ul>
-    </div>
-    <div class="content2">
-      <p>vossen eten veel verschillende dingen</p>
-    </div>
+     <div class="content">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/ZBSLYTeXOj0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+     </div>
   </body>
 </html>
